<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learning2Write</string>
    <string name="Upper">Uppercase</string>
    <string name="Lower">Lowercase</string>
    <string name="Voice_dir">Voice Directions</string>
    <string name="Erase">Erase</string>
    <string name="Next">Next</string>
    <string name="Back">Back</string>
    <string name="Name">Name</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_tabbed_view">TabbedView</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_lowe_case_tabbed">LoweCaseTabbed</string>

</resources>