<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
     <com.learning2write.DrawDiag
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:focusable="true" />

    <Button
        android:id="@+id/button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Voice_dir" >
    </Button>

    <Button
        android:id="@+id/button1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/Erase" />

    <Button
        android:id="@+id/button2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/Next" />

    <Button
        android:id="@+id/button3_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/Back" />

    <TextView
        android:id="@+id/LabelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3_id"
        android:layout_alignBottom="@+id/button3_id"
        android:layout_toLeftOf="@+id/button1_id"
        android:layout_toRightOf="@+id/button3_id"/>

</RelativeLayout>
