<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom" >

	<Button 
	    android:id="@+id/button_id" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/Upper"/>

		<Button
		    android:id="@+id/button1_id"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentTop="true"
		    android:text="@string/Lower" />

		<TextView
		    android:id="@+id/LabelView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerHorizontal="true"
		    android:layout_centerVertical="true"
		    tools:context=".MainActivity" />
		
		<Button
		    android:id="@+id/button2_id"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/button1_id"
		    android:layout_alignParentBottom="true"
		    android:layout_alignParentRight="true"
		    android:text="@string/Next" />

</RelativeLayout>
